# client/src/lib/api/openapi.json
@@ -3125,7 +3125,8 @@
                   "low",
                   "medium",
                   "high",
-                  "xhigh"
+                  "xhigh",
+                  "max"
                 ],
                 "type": "string"
               },
@@ -3586,7 +3587,8 @@
                   "low",
                   "medium",
                   "high",
-                  "xhigh"
+                  "xhigh",
+                  "max"
                 ],
                 "type": "string"
               },
@@ -4816,7 +4818,8 @@
                   "low",
                   "medium",
                   "high",
-                  "xhigh"
+                  "xhigh",
+                  "max"
                 ],
                 "type": "string"
               },
